  
[v1.1.1p8c]
 - API: Added support for the perspective API to the Toolbar Extension
 - Bugfix: Binary format for permanent layout storage has been broken

[v1.1.1p8d]
 - Bugfix: CToolbarMode is now considered to be a "basic mode".
 - Bugfix: ToolbarGridLayoutManager could throw exception because its cached data was outdated

[v1.1.1p8e]
 - API: Added support for perspectives in Common for toolbars
 - API: Toolbar factories can now estimate the location of the Dockables
 - Bugfix: Estimation of location of Dockables was missing parts when analyzing deeply nested stations/dockables.  
 - Bugfix: CommonDockStationFactory does not add a CStation that is already registered
 ! API: new constructors for CGridPerspective and CWorkingPerspective
 ! API: more strict type checks when reading a layout, reading wrong types (like a CWorkingArea where a CGridArea was previously) will throw an exception.
 - Bugfix: divider on SplitDockStation could not be grabbed if the divider location was invalid (too big or too small).
 ! API: removed obsolete interfaces ToolbarInterface and ToolbarElementInterface

[v1.1.1p8f]
 - API: DockFrontend can now read and store its settings as a SettingsBlop
 ! API: DockRegisterListener is now informed if the DockRegister is stalled
 - API: Removed obsolete code from CControl which stored the working area of SingleCDockables. This data is already stored by CommonSingleDockableLayout
 - Bugfix: The working-area of SingleCDockables was not set if the working are was created lazily while reading a layout
 - API: The new CControlPerspectiveBlop allows clients to read and write entire layout files without the need of creating any CDockables
 ! API: Removed the mapping between factories and MultipleCDockables that was stored in CSetting, but that was not accessed anywhere
    
[Todo]
- Drop StackDockStation over Dockable and merge them