@@ -110,21 +110,6 @@ public class CombinedStackDockContentPane extends ConfiguredBackgroundPanel{
     
     @Override
     public Dimension getMinimumSize() {
-    	Dimension result = new Dimension( 5, 5 );
-    	
-    	for( Dockable dockable : parent.getDockables() ){
-    		Dimension size = dockable.getComponent().getMinimumSize();
-    		result.width = Math.max( result.width, size.width );
-    		result.height = Math.max( result.height, size.height );
-    	}
-    	
-    	Dimension parentSize = parent.getMinimumSize();
-    	if( parent.getDockTabPlacement().isHorizontal() ){
-    		result.height += parentSize.height;
-    	}
-    	else{
-			result.width += parentSize.width;
-    	}
-    	return result;
+    	return parent.getMinimumSize();
     }
 }
